# StrukturyDanych2

./: CMakeLists.txt  TablicaPriorytetowa.cpp  TablicaPriorytetowa.hpp  Testy.xlsx  Wezel.hpp  generate_data.cpp  generate_data.h  heap.cpp  heap.h  main.cpp  test.cpp  test.h
